# ai-platform-engineering

./: .env.example  docker-compose.dev.yaml  docker-compose.yaml
ai_platform_engineering/autonomous_agents/: Dockerfile  EXPERIENCE.md  IMPROVEMENTS.md  README.md  config.yaml  pyproject.toml
ai_platform_engineering/autonomous_agents/scripts/: run_supervisor_local.ps1
ai_platform_engineering/autonomous_agents/tests/: test_a2a_client.py  test_chat_history.py  test_chat_history_thread.py  test_circuit_breaker.py  test_config.py  test_disable_cascade.py  test_dynamic_agents_client.py  test_models.py  test_mongo_run_store.py  test_mongo_service.py  test_mongo_task_store.py  test_preflight.py  test_run_store.py  test_run_store_factory.py  test_scheduler_chat_history.py  test_scheduler_hot_reload.py  test_scheduler_run_store.py  test_task_store.py  test_task_store_factory.py  test_tasks_crud_route.py  test_tasks_dynamic_agent_branch.py  test_tasks_route.py  test_trigger_dedup.py  test_webhooks.py  test_webhooks_followup.py
ai_platform_engineering/integrations/webex_bot/: README.md  app.py  config.py  dispatcher.py  pyproject.toml
ai_platform_engineering/integrations/webex_bot/tests/: test_dispatcher.py  test_webhook_registration.py
ai_platform_engineering/multi_agents/platform_engineer/: deep_agent.py  deep_agent_single.py  prompts.py
ai_platform_engineering/multi_agents/tests/: test_autonomous_tasks_tools.py  test_webhook_setup_e2e.py
ai_platform_engineering/multi_agents/tools/: __init__.py  (+3 more)
ai_platform_engineering/utils/: prompt_config.py
ui/: .env.example
(+61 files in other folders)
